2006-01-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added debug module

2006-01-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: require pkg-config only when zeroconf support is enabled

2006-01-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: add option to disable mysql or pgsql at configure time

2006-01-11  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: enable MLST/MLSD by default

2006-01-10  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: custom commands broken

2006-01-09  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: server always send messages to syslog
	* bugfix: messages with custom levels are sent to syslog with priority
	emergency

2006-01-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: suppress debug messages for events

2006-01-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: reject_unknown_users not working

2006-01-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: exit nicely when called with option -V or -h

2005-12-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: sfv module not using event POSTUPLOAD
	* bugfix: PBSZ command not working

2005-12-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-6-0

	* feature: pid file is now optional

2005-12-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: allow gadmins to change to homedir for their users

2005-12-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: crash when invalid arguments are given to site group

2005-12-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: merge initial zeroconf support

2005-12-10  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: reply wrong address on PASV
	* bugfix: SFV module not working

2005-12-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: support for multiple addresses/ports binds. This also
	allows to have both IPv4 and IPv6 sockets on *BSD (Closes: #0035)

2005-12-02  Pierre Chifflier  <pollux@wzdftpd.net>
