@@ -1,3 +1,7 @@
+2006-01-25  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: option to check ip before sending banner
+
 2006-01-21  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: added debug module
